# react-bazel-starter

./: BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  app.ts  hello.tsx  index.tsx  package-lock.json  package.json
tools/: bazel_deps.bzl
ui/: BUILD.bazel  index.html  index.tsx  package.json  tsconfig.json
ui/src/: hello.tsx
